--- a/src/main/resources/templates/goods/detail.html
+++ b/src/main/resources/templates/goods/detail.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="mall/header::head-fragment('NewBee商城-商品详情','detail')">
 </head>
+<link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/sweetalert2.css}"/>
 <body>
 <header th:replace="mall/header::header-fragment"></header>
 
@@ -35,8 +36,14 @@
             </div>
 
             <div class="order">
-                <input class="car" type="button" th:onclick="'saveAndGoCart('+${goodsDetail.id}+')'" value="立即选购"/>
-                <input class="car" type="button" th:onclick="'saveToCart('+${goodsDetail.id}+')'" value="加入购物车"/>
+                <th:block th:if="${goodsDetail.userId} == ${session.User.getId()}">
+                    <input class="car" type="button" th:onclick="'giveBid()'" value="修改信息"/>
+                    <input class="car" type="button" th:onclick="" value="下架"/>
+                </th:block>
+                <th:block th:unless="${goodsDetail.userId} == ${session.User.getId()}">
+                    <input class="car" type="button" th:onclick="'giveBid()'" value="立即出价"/>
+                    <input class="car" type="button" th:onclick="'saveToCart('+${goodsDetail.id}+')'" value="加入购物车"/>
+                </th:block>
             </div>
 <!--            <div class="tb-extra ml20" id="J_tbExtra">-->
 <!--                <dl>-->
@@ -69,12 +76,287 @@
 
 <!-- jQuery -->
 <script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
-<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
+<!--<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>-->
+<script th:src="@{/admin/plugins/sweetalert/sweetalert2.js}"></script>
 <script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
-<script type="text/javascript">
+<!--<script th:src="@{/admin/plugins/web3.min.js}" type="text/javascript"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+<script type="text/javascript" th:inline="javascript">
     /**
      * 添加到购物车
      */
+
+    /*<![CDATA[*/
+
+    var merchId = /*[[${goodsDetail.id}]]*/ 'Sebastian';
+    var sellerId = /*[[${goodsDetail.userId}]]*/ 'Sebastian';
+    var reservePrice = /*[[${goodsDetail.reservePrice}]]*/ '';
+    var leastEachPriceIncrease = /*[[${goodsDetail.leastEachPriceIncrease}]]*/ '';
+    var userId = /*[[${session.User.getId()}]]*/ '22';
+    var userAddress = /*[[${Account.etheraddress}]]*/ '';
+    var sellerAddress = /*[[${AccountOfOwner.etheraddress}]]*/ '';
+
+    /*]]>*/
+
+    var httpProvider;
+    var web3;
+    var auctionContract
+    console.log(merchId);
+    console.log(userId);
+    console.log(userAddress);
+    $(function (){
+
+        httpProvider = new Web3.providers.HttpProvider("HTTP://127.0.0.1:7545");
+        web3 = new Web3(httpProvider);
+        auctionContract = new web3.eth.Contract([
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "sellerid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "highestbidderid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "highestprice",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "address payable",
+                        "name": "sellerAddress",
+                        "type": "address"
+                    }
+                ],
+                "name": "start",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidderid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidprice",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "getBid",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            },
+            {
+                "constant": true,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidderid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidprice",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "isChanged",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "view",
+                "type": "function"
+            },
+            {
+                "constant": true,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchid",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "getAucInfo",
+                "outputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    },
+                    {
+                        "internalType": "address",
+                        "name": "",
+                        "type": "address"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "view",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchid",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "end",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            }
+        ], '0xCA2993c793A72a5c540EAC813135E371Dbc4c2B1');
+        auctionContract.setProvider(httpProvider);
+
+
+       // auctionContract.methods.newMerchOpenAuctionNo(userId, merchId, reservePrice, leastEachPriceIncrease).send({from: '0xF94621DF0581E662C2F4ae6D045255FA5235A603'});
+        /*auctionContract.methods.getAucInfo(merchId).call().then(function (result){
+            console.log(result);
+            if(result[3] == false){
+                auctionContract.methods.start(merchId,userId,reservePrice,leastEachPriceIncrease,userAddress).send({from: userAddress, gas: 2000000})
+            }else{
+                console.log("nothing");
+            }
+        });*/
+
+
+        })
+
+
+
+
+    function giveBid(){
+        auctionContract.methods.getAucInfo(merchId).call().then(function (result){
+            console.log(result);
+            if(result[3] == false){
+                auctionContract.methods.start(merchId,sellerId,0,0,sellerAddress).send({from: sellerAddress, gas: 2000000})
+            }else{
+                console.log("nothing");
+                var val = 0;//接收输入的字符
+                swal({
+                    title: 'Input something',
+                    input: 'text',
+                    showCancelButton: true,
+                    inputValidator: function(value) {
+                        return new Promise(function(resolve, reject) {
+                            if (value) {
+                                resolve();
+                                val = value;
+                            } else {
+                                reject('You need to write something!');
+                            }
+                        });
+                    }
+                }).then(function (){
+                    if(Number(val) > 0){
+                        var highestPrice = Number(result[2].toString());
+                        var bidPrice = Number(val);
+                        console.log(highestPrice);
+                        console.log(bidPrice);
+                        if(bidPrice > reservePrice + leastEachPriceIncrease && bidPrice > highestPrice + leastEachPriceIncrease){
+                            console.log("bid with " + bidPrice);
+                            auctionContract.methods.getBid(merchId, userId, bidPrice).send({from: userAddress, gas: 2000000});
+                            swal({
+                                type: 'success',
+                                html: '出价成功！ ',
+                                timer: 2000
+                            });
+                        }else{
+                            swal({
+                                type: 'error',
+                                html: '出价失败！ ',
+                                timer: 2000
+                            });
+                            console.log("出价失败！");
+                        }
+                    }else {
+                        swal({
+                            type: 'error',
+                            html: '出价失败！ ',
+                            timer: 2000
+                        });
+                    }
+                })
+
+
+            }
+
+
+        });
+
+
+
+    }
+
     function saveToCart(id) {
         var goodsCount = 1;
         var data = {
