--- a/src/main/resources/templates/mall/index.html
+++ b/src/main/resources/templates/mall/index.html
@@ -18,7 +18,7 @@
         <div class="all-sort-list">
             <th:block>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=玉翠珠宝"><th:block th:text="玉翠珠宝"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=玉翠珠宝"><th:block th:text="玉翠珠宝"></th:block></a></h2>
 
                     <!--<div class="item-list clearfix">
                         <div class="subitem">
@@ -38,25 +38,25 @@
                     </div>-->
                 </div>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=文玩收藏"><th:block th:text="文玩收藏"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=文玩收藏"><th:block th:text="文玩收藏"></th:block></a></h2>
                 </div>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=奢侈品"><th:block th:text="奢侈品"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=奢侈品"><th:block th:text="奢侈品"></th:block></a></h2>
                 </div>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=数码"><th:block th:text="数码"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=数码"><th:block th:text="数码"></th:block></a></h2>
                 </div>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=工艺品"><th:block th:text="工艺品"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=工艺品"><th:block th:text="工艺品"></th:block></a></h2>
                 </div>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=茶酒滋补"><th:block th:text="茶酒滋补"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=茶酒滋补"><th:block th:text="茶酒滋补"></th:block></a></h2>
                 </div>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=机动车"><th:block th:text="机动车"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=机动车"><th:block th:text="机动车"></th:block></a></h2>
                 </div>
                 <div class="item">
-                    <h2><span>·</span><a href="/goods/search?keyword=其他"><th:block th:text="其他"></th:block></a></h2>
+                    <h2 style="padding-top: 8px;"><span>·</span><a href="/goods/search?keyword=其他"><th:block th:text="其他"></th:block></a></h2>
                 </div>
             </th:block>
         </div>
