--- a/src/main/resources/templates/orders/my_orders.html
+++ b/src/main/resources/templates/orders/my_orders.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" th:href="@{mall/css/iconfont.css}">
 <link rel="stylesheet" th:href="@{mall/styles/cart.css}">
 <link rel="stylesheet" th:href="@{'/mall/styles/search.css'}">
+<link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/sweetalert2.css}"/>
 <body>
 <!-- nav -->
 <nav th:replace="mall/header::nav-fragment"></nav>
@@ -39,7 +40,7 @@
                                 <div class="sub_content fl" style="height: 50px; line-height: 50px; margin-left: 0" th:text="${item.status}">1299元</div>
                                 <th:block th:if="${item.status=='未收货'}">
                                     <span style="margin-left: 50px;">
-                                        <button type="button" class="btn btn-primary" id="confirm" style="width: 60px; background: #3a99a2; margin-top: 7px; margin-left: 50px;" th:onclick="'javascript:;'">确认收货</button>
+                                        <button type="button" class="btn btn-primary" id="confirm" style="width: 60px; background: #3a99a2; margin-top: 7px; margin-left: 50px;" th:onclick="'javascript:confirm('+${item.id}+', '+${item.merchId}+');'">确认收货</button>
                                     </span>
                                 </th:block>
                                 <th:block th:if="${item.status=='已收货'}">
@@ -261,12 +262,326 @@
 <!-- Bootstrap 3 -->
 <script th:src="@{/mall/js/bootstrap3.js}"></script>
 <script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
-<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
+<!--<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>-->
+<script th:src="@{/admin/plugins/sweetalert/sweetalert2.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 <script type="text/javascript">
-    $(function () {
 
+    var httpProvider;
+    var web3;
+    var auctionContract;
+
+
+    $(function () {
+        httpProvider = new Web3.providers.HttpProvider("HTTP://127.0.0.1:7545");
+        web3 = new Web3(httpProvider);
+        auctionContract = new web3.eth.Contract([
+            {
+                "anonymous": false,
+                "inputs": [
+                    {
+                        "indexed": false,
+                        "internalType": "address",
+                        "name": "",
+                        "type": "address"
+                    },
+                    {
+                        "indexed": false,
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "GetTheBalance",
+                "type": "event"
+            },
+            {
+                "anonymous": false,
+                "inputs": [
+                    {
+                        "indexed": false,
+                        "internalType": "address",
+                        "name": "",
+                        "type": "address"
+                    },
+                    {
+                        "indexed": false,
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "SendEvent",
+                "type": "event"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchId",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "sellerId",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "address payable",
+                        "name": "sellerAddress",
+                        "type": "address"
+                    }
+                ],
+                "name": "start",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchId",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidderId",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidPrice",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "getBid",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": true,
+                "stateMutability": "payable",
+                "type": "function"
+            },
+            {
+                "constant": true,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchId",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidderid",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "bidprice",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "isChanged",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "view",
+                "type": "function"
+            },
+            {
+                "constant": true,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchId",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "getAucInfo",
+                "outputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    },
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    },
+                    {
+                        "internalType": "address",
+                        "name": "",
+                        "type": "address"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "view",
+                "type": "function"
+            },
+            {
+                "constant": true,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchId",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "getSellerAddress",
+                "outputs": [
+                    {
+                        "internalType": "address",
+                        "name": "",
+                        "type": "address"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "view",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchId",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "end",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": true,
+                "stateMutability": "payable",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "uint256",
+                        "name": "merchId",
+                        "type": "uint256"
+                    }
+                ],
+                "name": "trans",
+                "outputs": [
+                    {
+                        "internalType": "bool",
+                        "name": "",
+                        "type": "bool"
+                    }
+                ],
+                "payable": true,
+                "stateMutability": "payable",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "internalType": "address",
+                        "name": "addr",
+                        "type": "address"
+                    }
+                ],
+                "name": "getBalance",
+                "outputs": [
+                    {
+                        "internalType": "address",
+                        "name": "",
+                        "type": "address"
+                    },
+                    {
+                        "internalType": "uint256",
+                        "name": "",
+                        "type": "uint256"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            }
+        ], '0xa635bA25d6ffa8D1131e17e1195e7Ab53572f19F');//这个地方在区块链重新部署后需要修改[]与''
+        auctionContract.setProvider(httpProvider);
     });
 
+    function confirm(id, merchId){
+        var data={
+            orderId: id
+        }
+        auctionContract.methods.getSellerAddress(merchId).call().then(function (result){
+            console.log(result);
+            auctionContract.methods.trans(merchId).send({from:result, gas:2000000}).then(function (res){
+                console.log(res);
+            });
+        })
+        console.log(id + ' ' + merchId);
+
+        /*$.ajax({
+            url : "/confirm",
+            type : "POST",
+            data : JSON.stringify(data),
+            dataType: 'json',
+            contentType:'application/json;charset=UTF-8', //contentType很重要
+            success : function(result) {
+                if(result.type = "0"){
+                    swal({
+                        type: 'success',
+                        html: '收货成功！',
+                        timer: 2000
+                    });
+                    window.location.reload();
+                }else{
+                    swal({
+                        type: 'error',
+                        html: '收货失败！',
+                        timer: 2000
+                    });
+                }
+            }
+        })*/
+    }
 </script>
 </body>
 </html>
